# Nikorust

./: .env  .gitignore  Cargo.toml  LICENSE  Readme.md  build.sh  env_example  ladderbots.json  notes.txt  requirements.txt  run.sh  run2.sh  run_from_vscode.sh  run_headless.sh  rust-project.json  version_control.py
nikolaj/: Cargo.toml
nikolaj/legacy/: allocation.rs  repair.rs  scv.rs
nikolaj/legacy/modules/: build_order.rs  conditions.rs  construction.rs  mod.rs
nikolaj/src/: consts.rs  debug.rs  main.rs  mod.rs  params.rs
nikolaj/src/bot_macro/: buildings_micro.rs  conditions.rs  construction.rs  mod.rs  townhalls.rs
nikolaj/src/debug/: debugger.rs  display.rs  mod.rs  printing.rs  spawning.rs  types.rs
nikolaj/src/ex_main/: mod.rs
nikolaj/src/helpers/: build_order.rs  construction.rs  macro_manager.rs  map_manager.rs  mod.rs  strategy.rs
nikolaj/src/modules/: build_order.rs  buildings_micro.rs  conditions.rs  construction.rs  micro.rs  scv.rs  strategy.rs  townhalls.rs
nikolaj/src/strategy/: enemy_army.rs  enemy_readings.rs  mod.rs  my_army.rs  offensive.rs  points.rs  snapshots.rs  unit_snapshot.rs
nikolaj/src/structures/: addons.rs  armory.rs  barracks.rs  bunker.rs  command_center.rs  engineering_bay.rs  factory.rs  missile_turrets.rs  mod.rs  refinery.rs  starport.rs  supply_depots.rs
nikolaj/src/units/: banshee.rs  battlecruiser.rs  bio.rs  cyclone.rs  ghost.rs  hellion.rs  marauder.rs  marine.rs  medivac.rs  mod.rs  raven.rs  reaper.rs  scv.rs  surroundings.rs  tank.rs  thor.rs  viking.rs  widowmine.rs
nikolaj/src/units/helpers/: army_micro_control.rs  combat_info.rs  combat_movement.rs  combat_units.rs  heatmap.rs  mod.rs  surroundings.rs  (+5 more)
(+9 files in other folders)
