[package]
name = "nikolaj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sc2 = { git = "https://github.com/ratosh/rust-sc2" }
clap = {version = "4.5.4", features = ["derive", "cargo"] }
lazy_static = "1.4.0"

[[bin]]
name = "Nikolaj"
path = "src/main.rs"