[package]
name = "nikolaj"
version = "1.0.1"
edition = "2021"
description = "A StarCraft II Terran bot. Last build: 06/10/2025"
license = "MIT"
authors = ["Juraj Kralik (DAX)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sc2 = { git = "https://github.com/JurajKralik/rust-sc2" }
clap = {version = "4.5.4", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
rand = "0.8"

[[bin]]
name = "Nikolaj"
path = "src/main.rs"

[features]
wine_sc2 = ["rust-sc2/wine_sc2"]
ladder = []